--- a/notebooks/01_analise_exploratoria.ipynb
+++ b/notebooks/01_analise_exploratoria.ipynb
@@ -883,9 +883,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "analise_macro",
+   "display_name": "Python (anomalias_macro)",
    "language": "python",
-   "name": "python3"
+   "name": "anomalias_macro"
   },
   "language_info": {
    "codemirror_mode": {
